--- a/Resources/ResGraphicsVulkan/ResGraphicsVulkan.vcxproj.filters
+++ b/Resources/ResGraphicsVulkan/ResGraphicsVulkan.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClCompile Include="RbVulkanGraphicsPipeline.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="RbVulkanCommandListGraphics.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
