--- a/Runtime/Asset/Asset.vcxproj
+++ b/Runtime/Asset/Asset.vcxproj
@@ -67,12 +67,13 @@
     <ClCompile Include="details\AssetChangeCallbackProxy.cpp" />
     <ClCompile Include="details\AssetEnum.cpp" />
     <ClCompile Include="AssetManager2.cpp" />
-    <ClCompile Include="details\AssetPath.cpp" />
+    <ClCompile Include="AssetPath.cpp" />
     <ClCompile Include="details\AssetPackageManager.cpp" />
     <ClCompile Include="details\AssetAccessProxy.cpp" />
     <ClCompile Include="details\AssetRequestProxy.cpp" />
     <ClCompile Include="HeapAssetManager.cpp" />
     <ClCompile Include="Package\AssetPackageFilesystem.cpp" />
+    <ClCompile Include="RbAssetMemoryView.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Asset.hpp" />
@@ -84,7 +85,7 @@
     <ClInclude Include="details\AssetEnum.hpp" />
     <ClInclude Include="details\AssetHasher.hpp" />
     <ClInclude Include="AssetManager2.hpp" />
-    <ClInclude Include="details\AssetPath.hpp" />
+    <ClInclude Include="AssetPath.hpp" />
     <ClInclude Include="details\AssetQuery.hpp" />
     <ClInclude Include="details\AssetPackageManager.hpp" />
     <ClInclude Include="AssetPackage.hpp" />
@@ -94,6 +95,7 @@
     <ClInclude Include="details\AssetRequestProxy.hpp" />
     <ClInclude Include="HeapAssetManager.hpp" />
     <ClInclude Include="Package\AssetPackageFilesystem.hpp" />
+    <ClInclude Include="RbAssetMemoryView.hpp" />
     <ClInclude Include="ServiceAssetManager.hpp" />
   </ItemGroup>
   <ItemGroup>
