--- a/Resources/ResGraphicsCommon/ResGraphicsCommon.vcxproj
+++ b/Resources/ResGraphicsCommon/ResGraphicsCommon.vcxproj
@@ -74,6 +74,9 @@
     <ProjectReference Include="..\..\Runtime\Asset\Asset.vcxproj">
       <Project>{8722e8a6-ddc8-4283-8dff-45cd15e7dc6f}</Project>
     </ProjectReference>
+    <ProjectReference Include="..\..\Runtime\HeapManager\HeapManager.vcxproj">
+      <Project>{dd541748-d082-4558-b456-c47f9d893211}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
