--- a/Common/Logging/Logging.vcxproj
+++ b/Common/Logging/Logging.vcxproj
@@ -71,6 +71,11 @@
     <ClInclude Include="Format.hpp" />
     <ClInclude Include="Logging.hpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\..\..\Library\Usagi\Usagi.vcxproj">
+      <Project>{f9061c06-bce6-416b-9aeb-31351810b7ba}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
