--- a/IO/Graphics/Graphics.vcxproj
+++ b/IO/Graphics/Graphics.vcxproj
@@ -66,12 +66,20 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Enum.hpp" />
+    <ClInclude Include="Image.hpp" />
     <ClInclude Include="ShaderCompiler.hpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="CreateLib.cpp" />
     <ClCompile Include="Enum.cpp" />
     <ClCompile Include="ShaderCompiler.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Common\Logging\Logging.vcxproj">
+      <Project>{e13613a3-b719-4bc5-991a-507402d14c25}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Common\Math\Math.vcxproj">
+      <Project>{d4e79012-d153-40c0-b62d-fc9b31495442}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
