--- a/Runtime/ProgramModule/ProgramModule.vcxproj
+++ b/Runtime/ProgramModule/ProgramModule.vcxproj
@@ -108,6 +108,11 @@
     <ClInclude Include="ServiceJitCompilation.hpp" />
     <ClInclude Include="Util.hpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\..\..\Library\Usagi\Usagi.vcxproj">
+      <Project>{f9061c06-bce6-416b-9aeb-31351810b7ba}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
