Request vulkan swapchain via heap manager.

--- a/Resources/ResVulkanWSI/ResVulkanWSI.vcxproj.filters
+++ b/Resources/ResVulkanWSI/ResVulkanWSI.vcxproj.filters
@@ -15,24 +15,12 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="HeapVulkanObjectManager.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="RbVulkanShaderModule.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="RbVulkanGraphicsPipeline.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="VulkanObjectManager.hpp">
+    <ClInclude Include="RbVulkanSwapchain.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="RbVulkanShaderModule.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="RbVulkanGraphicsPipeline.cpp">
+    <ClCompile Include="RbVulkanSwapchain.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
