--- a/Resources/ResVulkanWSI/ResVulkanWSI.vcxproj
+++ b/Resources/ResVulkanWSI/ResVulkanWSI.vcxproj
@@ -12,8 +12,8 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
-    <ProjectGuid>{e975bdf3-7afd-4da0-8b3e-adc22c128bff}</ProjectGuid>
-    <RootNamespace>ResGraphicsVulkan</RootNamespace>
+    <ProjectGuid>{720c23e6-a4db-471c-8f05-d15bdefb9a81}</ProjectGuid>
+    <RootNamespace>ResVulkanWSI</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -58,30 +58,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="HeapVulkanObjectManager.hpp" />
-    <ClInclude Include="RbVulkanGraphicsPipeline.hpp" />
-    <ClInclude Include="RbVulkanShaderModule.hpp" />
-    <ClInclude Include="VulkanObjectManager.hpp" />
+    <ClInclude Include="RbVulkanSwapchain.hpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="RbVulkanGraphicsPipeline.cpp" />
-    <ClCompile Include="RbVulkanShaderModule.cpp" />
+    <ClCompile Include="RbVulkanSwapchain.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Platforms\Vulkan\Vulkan.vcxproj">
-      <Project>{e51ee650-b088-4940-bee6-108c8a0ed508}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Runtime\Asset\Asset.vcxproj">
-      <Project>{8722e8a6-ddc8-4283-8dff-45cd15e7dc6f}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Runtime\HeapManager\HeapManager.vcxproj">
-      <Project>{dd541748-d082-4558-b456-c47f9d893211}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\ResGraphicsCommon\ResGraphicsCommon.vcxproj">
-      <Project>{5ac75a07-fb79-4059-b9bf-0a159a75151f}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\ResJson\ResJson.vcxproj">
-      <Project>{b77582cc-ec91-413a-b942-38e38cc90e16}</Project>
+    <ProjectReference Include="..\ResWindowManager\ResWindowManager.vcxproj">
+      <Project>{6ddf3320-ce69-436d-83d4-9848964e1eb5}</Project>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
