--- a/Runtime/HeapManager/HeapManager.vcxproj.filters
+++ b/Runtime/HeapManager/HeapManager.vcxproj.filters
@@ -90,6 +90,9 @@
     <ClInclude Include="details\HeapManagerImpl_Context.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="details\HeapManagerImpl_RequestHandler.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="HeapManager.cpp">
