reduce copying of build args & safe handling of rvalue refs

--- a/Runtime/HeapManager/HeapManager.vcxproj.filters
+++ b/Runtime/HeapManager/HeapManager.vcxproj.filters
@@ -87,6 +87,9 @@
     <ClInclude Include="ResourceExceptions.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="details\ResourceBuilderTraits.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="HeapManager.cpp">
