--- a/Runtime/HeapManager/HeapManager.vcxproj
+++ b/Runtime/HeapManager/HeapManager.vcxproj
@@ -62,6 +62,7 @@
     <ClInclude Include="details\HeapManagerImpl_RequestHandler.hpp" />
     <ClInclude Include="details\HeapManagerImpl_Util.hpp" />
     <ClInclude Include="details\HeapManagerImpl_Context.hpp" />
+    <ClInclude Include="details\ResourceBuilderTraits.hpp" />
     <ClInclude Include="details\ResourceBuildOptions.hpp" />
     <ClInclude Include="details\ResourceConstructDelegate.hpp" />
     <ClInclude Include="details\ResourceConstructDelegateImpl.hpp" />
