make json config loader support multiple base documents

--- a/Resources/ResJson/ResJson.vcxproj
+++ b/Resources/ResJson/ResJson.vcxproj
@@ -11,6 +11,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="JsonSchemaHelper.hpp" />
     <ClInclude Include="RbCascadingJsonConfig.hpp" />
     <ClInclude Include="RbJsonDocument.hpp" />
   </ItemGroup>
