--- a/Resources/ResJson/ResJson.vcxproj.filters
+++ b/Resources/ResJson/ResJson.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="RbCascadingJsonConfig.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="JsonSchemaHelper.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="RbJsonDocument.cpp">
