--- a/Scripting/Quirrel/QuirrelCompiler/QuirrelCompiler.vcxproj.filters
+++ b/Scripting/Quirrel/QuirrelCompiler/QuirrelCompiler.vcxproj.filters
@@ -14,8 +14,8 @@
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
   </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="quirrel\sq\sq.cpp">
+    <ItemGroup>
+    <ClCompile Include="..\quirrel\sq\sq.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
