--- a/Scripting/Quirrel/Directory.Build.props
+++ b/Scripting/Quirrel/Directory.Build.props
@@ -1,5 +1,6 @@
 <Project>
   <Import Project="$([MSBuild]::GetPathOfFileAbove('Directory.Build.props', '$(MSBuildThisFileDirectory)../'))"
           Condition="'' != $([MSBuild]::GetPathOfFileAbove('Directory.Build.props', '$(MSBuildThisFileDirectory)../'))"/>
-  <Import Project="Quirrel.props"/>
+  <Import Project="QuirrelBuild.props"/>
+  <Import Project="QuirrelIncludes.props"/>
 </Project>
