--- a/Scripting/Quirrel/QuirrelBuild.props
+++ b/Scripting/Quirrel/QuirrelBuild.props
@@ -22,7 +22,10 @@
   <ItemDefinitionGroup Label="Quirrel">
     <ClCompile>
       <AdditionalOptions>$(_quirrelCompatibilityFlags) %(AdditionalOptions)</AdditionalOptions>
-      <PreprocessorDefinitions>_SQ64;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <!-- See `sqconfig.h` for what macros can be defined. -->
+      <!-- We define `SQUSEDOUBLE` and `_SQ64` since nowadays game engine like Unreal -->
+      <!-- is universally using `double` type for better floating point precision. -->
+      <PreprocessorDefinitions>_SQ64;SQUSEDOUBLE;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
   </ItemDefinitionGroup>
 </Project>
