--- a/Scripting/Quirrel/Quirrel.vcxproj
+++ b/Scripting/Quirrel/Quirrel.vcxproj
@@ -16,11 +16,11 @@
     <RootNamespace>Quirrel</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
-  <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props"/>
+  <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup>
     <ConfigurationType>Application</ConfigurationType>
   </PropertyGroup>
-  <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props"/>
+  <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <PropertyGroup>
     <IncludePath>$(Usagi_IncludePaths);$(IncludePath)</IncludePath>
     <LibraryPath>$(Usagi_LibraryPaths);$(LibraryPath)</LibraryPath>
@@ -37,10 +37,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Runtime\Coroutine.hpp"/>
+    <ClInclude Include="Runtime\Coroutine.hpp" />
     <ClInclude Include="Runtime\CoroutineManager.hpp" />
     <ClInclude Include="Config\Defines.hpp" />
-    <ClInclude Include="Runtime\VirtualMachine.hpp"/>
+    <ClInclude Include="Runtime\VirtualMachine.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="QuirrelLibrary\QuirrelLibrary.vcxproj">
@@ -61,7 +61,14 @@
     <Content Include="scripts\tests\entity.nut" />
     <Content Include="scripts\tests\game_logic.nut" />
   </ItemGroup>
-  <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets"/>
+  <ItemGroup>
+    <None Include="Directory.Build.props" />
+    <None Include="QuirrelBuild.props" />
+    <None Include="QuirrelIncludes.props" />
+    <None Include="scripts\tests\entity.nut" />
+    <None Include="scripts\tests\game_logic.nut" />
+  </ItemGroup>
+  <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
 </Project>
